--- a/web_app/templates/print/master_steward_list.html
+++ b/web_app/templates/print/master_steward_list.html
@@ -8,17 +8,12 @@
         @page { size: A4 landscape; margin: 2.5cm 1cm 1cm 1cm; }
 
         /* NEU: Header, der sich auf jeder Seite wiederholt (Punkt 5) */
-        .print-header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 2cm;
-            text-align: center;
-        }
-        .print-header h1, .print-header h2 { margin: 0; }
-        .print-header h2 { font-size: 1.2em; }
-        .print-header h1 { font-size: 1em; color: #666; font-weight: normal; }
+        .print-header { position: fixed; top: 0; left: 0; right: 0; height: 2.6cm; display: flex; align-items: center; justify-content: space-between; gap: 1rem; }
+        .print-header__logo img { max-height: 2.2cm; width: auto; }
+        .print-header__titles { text-align: center; flex: 1; }
+        .print-header__titles h1, .print-header__titles h2 { margin: 0; }
+        .print-header__titles h2 { font-size: 1.2em; }
+        .print-header__titles h1 { font-size: 1em; color: #666; font-weight: normal; }
 
         .group-container { page-break-after: always; padding-top: 1cm; }
         .group-container:last-child { page-break-after: auto; }
@@ -33,14 +28,12 @@
         .run-col { width: 25px; }
         .run-header { height: 150px; }
 
-        main { padding-top: 2.5cm; }
+        main { padding-top: 3cm; }
     </style>
 </head>
 <body>
-    <header class="print-header">
-        <h1>{{ event.Bezeichnung }} - {{ event.Datum | format_date }}</h1>
-        <h2>Master-Einweiserliste</h2>
-    </header>
+    {% set title = 'Master-Einweiserliste' %}
+    {% include 'print/_print_header.html' %}
 
     <main>
         {% for cat, classes in final_grouped_data.items()|sort %}
